[tool.poetry]
name = "salomerivas"
version = "0.1.0"
description = ""
authors = ["Dmitrii Mashkov <mashkoffdmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
kagglehub = "^0.3.4"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

